--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ layout: default
         {% if paginator.total_pages > 1 %}
         <ul class="pagination">
           {% if paginator.previous_page %}
-            <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a></li>
+            <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Newer</a></li>
           {% else %}
-            <li><span>&laquo; Prev</span></li>
+            <li><span>&laquo; Older</span></li>
           {% endif %}
 
           {% for page in (1..paginator.total_pages) %}
