--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
                   
                   <div class="panel-body"><small>
                     {{ post.excerpt | strip_html | strip_newlines | truncate: 160 }}</small>
-                    →→→ Read more
+                    Read more
                   </div>
                 </div>
                 </a>
