--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
                   </div>
                   
                   <div class="panel-body"><small>
-                    {{ post.post_description | strip_html | strip_newlines | truncate: 160 }}</small>
+                    {{ excerpt | strip_html | strip_newlines | truncate: 160 }}</small>
                     Read more
                   </div>
                 </div>
